# immerse

./: README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: ankiconnect.rs  card_manager.rs  config.rs  db.rs  dl.rs  freya.rs  kanji.rs  main.rs  rocket.rs  test.rs  tui.rs  word_manager.rs
cli/static/: index.html
